--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,7 @@
     min-height: 100vh;
     text-align:center;
 }
+input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
